modules/ContentSlider/blocks/content-slider/style.css
/**
 * Content Slider - Frontend Styles
 *
 * Base styles for the content slider. Splide's core styles are loaded
 * via the kadence-blocks-splide dependency.
 */

.sc-content-slider {
    position: relative;

    .splide__slide {
        display: flex;
        flex-direction: column;

        > * {
            flex: 1;
            height: 100%;
        }

        > .wp-block-kadence-column {
            &,
            > .kt-inside-inner-col,
            > .kt-inside-inner-col > * {
                height: 100%;
            }
        }
    }

    /* Non-stretch alignments */
    &.is-vertically-aligned-top .splide__list {
        align-items: start;
    }
    &.is-vertically-aligned-center .splide__list {
        align-items: center;
    }
    &.is-vertically-aligned-bottom .splide__list {
        align-items: end;
    }

    /* Hide nav when all items fit on screen */
    &:not(.is-overflow) .splide__arrows {
        display: none;
    }
    &:not(.is-overflow) .splide__pagination {
        display: none;
    }

    &.is-vertically-aligned-top,
    &.is-vertically-aligned-center,
    &.is-vertically-aligned-bottom {
        .splide__slide {
            > * {
                flex: initial;
                height: auto;
            }

            > .wp-block-kadence-column {
                &,
                > .kt-inside-inner-col,
                > .kt-inside-inner-col > * {
                    height: auto;
                }
            }
        }
    }
}

